# HTTPFolderFetch.py

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
accessors/: Accessor.py  BehavedAccessor.py  PlainAccessor.py  __init__.py
crawlers/: Crawler.py  GbpHttpCrawler.py  KhinsiderCrawler.py  NginxJsonCrawler.py  __init__.py
downloaders/: Aria2Downloader.py  Downloader.py  DownloaderFactory.py  __init__.py
entities/: Crawlable.py  Downloadable.py  File.py  Folder.py  __init__.py
parsers/: CsvParser.py  JsonParser.py  Parser.py  ParserFactory.py  __init__.py
strategies/: GbpStrategy.py  KhinsiderStrategy.py  NginxJsonStrategy.py  NginxShareStrategy.py  Strategy.py  StrategyFactory.py  __init__.py
