[project]
name = "httpfolderfetch"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.14",
    "aiomultiprocess>=0.9.1",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.3",
    "frozenlist>=1.5.0",
    "idna>=3.10",
    "multidict>=6.2.0",
    "propcache>=0.3.0",
    "pydantic>=2.10.6",
    "typing-extensions>=4.12.2",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "yarl>=1.18.3",
]
